# lib_template

./: .gitignore  CMakeLists.txt
cmake/: common.cmake  functions.cmake
include/: geomlib.h
src/common/config/json/: configjson.cpp  configjson.h
src/common/file/: fileadapter.cpp  fileadapter.h
src/common/i/: iconfig.h  ilib.h  ilibclass.h
src/common/system/linux/: linuxsystem.cpp  linuxsystem.h
src/common/system/windows/: windowssystem.cpp  windowssystem.h
src/common/tools/: specjson.h  specstatic.h
src/main_lib/: CMakeLists.txt
src/main_lib/src/: geomlib.cpp
src/main_lib/src/impl/: geomimpl.cpp  geomimpl.h
src/main_test/: CMakeLists.txt
src/main_test/cmake/: prepare.cmake
src/main_test/src/test1/: test1_impl.cpp  test1_impl.h
src/main_test/src/test2/: test2_impl.cpp  test2_impl.h
src/main_test/test/: example_subtract.cpp  test1.cpp  test2.cpp
src/main_test/test_assets/: test1.json  test2.json
src/main_test/test_exe/: test_exe.cpp
